@@ -1,5 +1,5 @@
 /*
- * $Id: hbdefs.h,v 1.44 2004/05/12 02:25:24 druzus Exp $
+ * $Id: hbdefs.h,v 1.45 2004/05/12 04:32:54 ronpinkas Exp $
  */
 
 /*
@@ -246,7 +246,7 @@
 #if !defined( UINT16 )
 #  if USHRT_MAX == 0xffff
       typedef USHORT       UINT16;
-#     if ( ! defined( __XCC__ ) )
+#     if ( ! defined( __XCC__ ) && ! defined( __MINGW32__ ) )
 #        define UINT16_MAX    USHRT_MAX
 #        define INT16_MAX     SHRT_MAX
 #        define INT16_MIN     SHRT_MIN
@@ -256,7 +256,7 @@
 #if !defined( UINT32 )
 #  if UINT_MAX == 0xffffffff
       typedef UINT         UINT32;
-#     if ( ! defined( __XCC__ ) )
+#     if ( ! defined( __XCC__ ) && ! defined( __MINGW32__ ) )      
 #        define UINT32_MAX    UINT_MAX
 #        define INT32_MAX     INT_MAX
 #        define INT32_MIN     INT_MIN
@@ -273,14 +273,14 @@
 #if !defined( UINT64 ) && !defined( HB_LONG_LONG_OFF )
 #  if ULONG_MAX > UINT_MAX && UINT_MAX > USHORT_MAX
       typedef ULONG        UINT64;
-#     if ( ! defined( __XCC__ ) )
+#     if ( ! defined( __XCC__ ) && ! defined( __MINGW32__ ) )            
 #        define UINT64_MAX    ULONG_MAX
 #        define INT64_MAX     LONG_MAX
 #        define INT64_MIN     LONG_MIN
 #     endif
 #  else
       typedef ULONGLONG    UINT64;
-#     if ( ! defined( __XCC__ ) )
+#     if ( ! defined( __XCC__ ) && ! defined( __MINGW32__ ) )                  
 #        define UINT64_MAX    ULONGLONG_MAX
 #        define INT64_MAX     LONGLONG_MAX
 #        define INT64_MIN     LONGLONG_MIN
